# TestPegaMCP

./: .gitignore  README.md
test_mcp_server/: .env.example  Dockerfile  ENVIRONMENT.md  README.md  debug_case_creation.py  debug_pega_api.py  detailed_debug.py  docker-compose.yml  get_case_id.py  get_case_id_full.py  pyproject.toml  simple_test.py  start_ngrok_tunnel.py  test_content_structures.py  test_create_and_attach.py  test_create_case.py  test_mcp_tool.py  test_policy_label.py  tmp_create_case_minimal.py  tmp_create_case_test.py
test_mcp_server/app/: PegaSettings.py  Tokenhelper.py  __init__.py  auth.py  config.py  health_server.py  main.py  pega_client.py
test_mcp_server/app/tools/: PegaAttachment.py  PegaCreateCase.py  __init__.py
test_mcp_server/generic_mcp_server_scaffold.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
